# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/var/: db_graph.txt  sequences.txt
laskarit/viikko1/: README.md  gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
sovellus/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
sovellus/src/repositories/: generator_repository.py
src/: build.py  config.py  database_connection.py  index.py  init_database.py  init_default_set.py  init_wishlist_dir.py  main.py
src/UI/: ui.py
src/entities/: default_set.py  ingredient.py  meal.py  meal_set.py  menu.py  user.py
src/repositories/: config_repository.py  default_set_repository.py  generator_repository.py  io.py  library_repository.py  meal_repository.py  menu_repository.py  user_repository.py
src/services/: controller.py  generator.py
src/tests/: conftest.py  controller_integration_test.py  controller_test.py  controller_unit_test.py  generator_test.py  generatory_repository_test.py  init_wishlist_dir.py  io_test.py  library_repository_test.py  meal_repository_test.py  menu_repository_test.py  user_repository_test.py
src/tests/assets/: meal_set.py
src/tests/repositories/: library_repository_test.py  (+1 more)
src/ui/: cli_ui.py  create_user_view.py  info_view.py  login_view.py  main_view.py  management_view.py  menu_view.py  remove_item_view.py  ui.py  wishlist_view.py
(+9 files in other folders)
