[tool.poetry]
name = "Menu generator"
version = "0.1.0"
description = "For the people who are tired of thinking what to eat this week"
authors = ["Pekka <75335748+P3Xu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.16.0"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.2"
pylint = "^2.7.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
